--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@ Network Systems and etc.</p>
 <details open="" style="margin-bottom: 10px;">
   <summary><b>Conference papers</b></summary>
   <ul>
-    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Chaoliang Zeng, Zilong Wang, Junxue Zhang, kun Guo, Hong Xu, Jiawei Huang, Kai Chen. Enabling Load Balancing for Lossless Datacenters. <em><strong>IEEE ICNP, 2023.</strong></em><span>&nbsp;</span> <font style="color:red"><em><b>(Best Paper Award)</b></em></font><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Chaoliang Zeng, Zilong Wang, Junxue Zhang, kun Guo, Hong Xu, Jiawei Huang, Kai Chen. Enabling Load Balancing for Lossless Datacenters. <em><strong>IEEE ICNP, 2023.</strong></em><span>&nbsp;</span> <font style="color:red"><em><b>(Best Paper Award)</b></em></font><span>&nbsp;</span><a href="hujinbin-ICNP-2023.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
     <li style="padding: 2px 0px;">Wenxue Li, Chaoliang Zeng, <b>Jinbin Hu</b>, Kai Chen. Towards Fine-grained and Practical Flow Control for Datacenter Networks. <em><strong>IEEE ICNP, 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
