--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@
 <details open="" style="margin-bottom: 10px;">
   <summary><b>Conference papers</b></summary>
   <ul>
-    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Yi He</u>, <span>&nbsp;</span><u>Wangqing Luo</u>,, Jiawei Huang, Jianxin Wang TaLB: Tensor-aware Load Balancing for Distributed DNN Training Acceleration. <em><strong>IWQoS, 2024.<a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Yi He</u>, <span>&nbsp;</span><u>Wangqing Luo</u>, Jiawei Huang, Jianxin Wang TaLB: Tensor-aware Load Balancing for Distributed DNN Training Acceleration. <em><strong>IWQoS, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
 
       
