--- a/index.html
+++ b/index.html
@@ -112,6 +112,13 @@
 <details open="" style="margin-bottom: 10px;">
     <summary><b>Journal papers</b></summary>
     <ul>
+        <li style="padding: 2px 0px;">Wenxue Li, Chaoliang Zeng,<b>Jinbin Hu</b>, Kai Chen. FlowSail: Fine-grained and Practical Flow Control for Datacenter Networks. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Yi He, Wangqing Luo, Jiawei Huang, Jin Wang. Enhancing Load Balancing with In-network Recirculation to Prevent Packet Reordering in Lossless Data Centers. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Houqiang Shen, Xuchong Liu, Jin Wang. RDMA Transports in Datacenter Networks: Survey. <em><strong>IEEE Network, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+
+        
         <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, Chaoliang Zeng, Zilong Wang, Junxue Zhang, Kun Guo, Hong Xu, Jiawei Huang, Kai Chen. Load Balancing with Multi-level Signals for Lossless Datacenter Networks. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
         <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Wangqing Luo</u>, Min Zhu, <span>&nbsp;</span><u>Yi He</u>, <span>&nbsp;</span><u>Shuying Rao</u>, Jin Wang. A Novel Load Balancing Mechanism Based on Deep Reinforcement Learning for Human-centric Applicationsin Datacenters. <em><strong>in Human-centric Computing and information Sciences, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
@@ -137,7 +144,9 @@
 <details open="" style="margin-bottom: 10px;">
   <summary><b>Conference papers</b></summary>
   <ul>
-    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Yi He</u>, <span>&nbsp;</span><u>Wangqing Luo</u>, Jiawei Huang, Jianxin Wang TaLB: Tensor-aware Load Balancing for Distributed DNN Training Acceleration. <em><strong>IWQoS, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Ying Liu</u>, Hao Wang, Jin Wang. AutoPipe: Automatic Configuration of Pipeline Parallelism on Shared GPU Cluster. <em><strong>ACM ICPP, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
+      
+    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Yi He</u>, <span>&nbsp;</span><u>Wangqing Luo</u>, Jiawei Huang, Jianxin Wang. TaLB: Tensor-aware Load Balancing for Distributed DNN Training Acceleration. <em><strong>IEEE IWQoS, 2024.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
     <li style="padding: 2px 0px;"><span>&nbsp;</span><u>Houqiang Shen</u>, Jin Wang, <span>&nbsp;</span><u>Yusheng Deng</u>, Jing Wang, <b>Jinbin Hu</b>*. APS: Adaptive Priority-aware Sketch with Low Overhead for Heterogeneous Traffic. <em><strong>CSA, 2023.</strong></em><span>&nbsp;</span><a href="" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">PDF Download</a></li>
 
