--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta name="description" content="CSUST DCN Lab">
-<meta name="description" content="长沙理工大学研究生">
-<meta name="description" content="长沙理工大学胡晋彬">
+<meta name="keywords" content="长沙理工大学计算机研究生">
+<meta name="keywords" content="长沙理工大学导师胡晋彬">
 
 <title>CSUST DCN Lab | Homepage</title>
 
