--- a/index.html
+++ b/index.html
@@ -195,19 +195,19 @@
 
 <div class="gdoc-page__anchorwrap"><h4 id="master-students-硕士">Master Students (硕士):<a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor Master Students (硕士):" href="#master-students-硕士"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h4></div>
 <ul>
-    <li><strong>何熠(Yi He,21级研究生)：</strong> IEEE/ACM Transactions on Networking(CCF A类期刊), IEEE IWQoS(CCF B类会议), ACM ICPP(CCF B类会议), HCIS(中科院二区)</li>
+    <li><strong>何熠(Yi He,21级研究生)：</strong> 国家奖学金, IEEE/ACM TON(CCF A类期刊), IEEE IWQoS(CCF B类会议), ACM ICPP(CCF B类会议), HCIS(中科院二区)</li>
     <li><strong>罗望卿(Wangqing Luo,21级研究生)：</strong> HCIS(中科院二区), IEEE ICA3PP(CCF C类会议), TII(中科院一区,在投)</li>
-    <li><strong>饶淑莹(Shuying Rao,21级研究生)：</strong> JNCA(中科院二区), TII(中科院一区,在投)</li>
+    <li><strong>饶淑莹(Shuying Rao,21级研究生)：</strong> 国家奖学金, JNCA(中科院二区), TII(中科院一区,在投)</li>
     <li><strong>贺蔓(Man He,21级研究生)：</strong> IEEE ICA3PP(CCF C类会议,最佳论文)</li>
     <br>
    
-    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> </strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院三区), IEEE INFOCOM(CCF A类会议,在投)</li>
-    <li><strong>周子凯(Zikai Zhou,22级研究生)：</strong> TNSM(中科院二区,在投), IEEE ISPA(CCF C类会议,在投)</li>
+    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院三区), IEEE INFOCOM(CCF A类会议,在投)</li>
+    <li><strong>周子凯(Zikai Zhou,22级研究生)：</strong> TNSM(中科院二区), IEEE ISPA(CCF C类会议)</li>
     <br>
 
     <li><strong>申厚强(Houqiang Shen,23级研究生)：</strong> IEEE Network(中科院二区), CSA(国际会议)</li>
-    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE Transactions on Computers(CCF A类期刊,在投), IEEE ISPA(CCF C类会议,在投)</li>
-    <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> Computer Networks(CCF B类期刊,在投), IEEE ISPA(CCF C类会议,在投)</li>
+    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE TMC(CCF A类期刊), IEEE ISPA(CCF C类会议)</li>
+    <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> Computer Networks(CCF B类期刊,在投), IEEE ISPA(CCF C类会议)</li>
 </ul>
 
 <div class="gdoc-page__anchorwrap"><h2 id="fundings"><strong>Fundings:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Fundings:</strong>" href="#fundings"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
@@ -217,6 +217,10 @@
     <li>湖南省自然科学基金面上项目, 2022JJ30618, 面向分布式深度神经网络(DNN)的通信优化技术研究，2022.01.1–2024.12.31, 主持;</li>
 
     <li>湖南省教育厅青年项目, 22B0300, 数据中心无损网络负载均衡机制研究，2023.1.1-2025.12.31, 主持;</li>
+
+    <li>国家自然科学基金面上项目, 62472050, 面向数据中心容损RDMA网络的高效可扩展传输控制机制研究，2025.1.1-2028.12.31, 主持;</li>
+
+    <li>国家自然科学基金面上项目, 62473146, 面向边缘数据中心网络的智能拥塞控制关键技术研究，2025.1.1-2028.12.31, 合作主持;</li>
 </ul>
 
 
