--- a/index.html
+++ b/index.html
@@ -201,13 +201,13 @@
     <li><strong>贺蔓(Man He,21级研究生)：</strong> IEEE ICA3PP(CCF C类会议,最佳论文)</li>
     <br>
    
-    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院四区), IEEE INFOCOM(CCF A类会议,在投)</li>
+    <li><strong>刘颖(Ying Liu,22级研究生)：</strong> ACM ICPP(CCF B类会议),Ad Hoc Networks(中科院二区), IEEE ICA3PP(CCF C类会议), CMC(中科院四区)</li>
     <li><strong>周子凯(Zikai Zhou,22级研究生)：</strong> TNSM(中科院二区), IEEE ISPA(CCF C类会议)</li>
     <br>
 
     <li><strong>申厚强(Houqiang Shen,23级研究生)：</strong> IEEE Network(中科院二区), CSA(国际会议)</li>
-    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE TMC(CCF A类期刊,在投), IEEE ISPA(CCF C类会议)</li>
-    <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> Computer Networks(CCF B类期刊,在投), IEEE ISPA(CCF C类会议)</li>
+    <li><strong>智睿(Rui Zhi,23级研究生)：</strong> IEEE ISPA(CCF C类会议)</li>
+    <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> IEEE ISPA(CCF C类会议)</li>
 </ul>
 
 <div class="gdoc-page__anchorwrap"><h2 id="fundings"><strong>Fundings:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Fundings:</strong>" href="#fundings"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
