--- a/index.html
+++ b/index.html
@@ -222,7 +222,7 @@
     <li><strong>李睿谦(Ruiqian Li,23级研究生)：</strong> IEEE ISPA(CCF C类会议), Computer Network(CCF B类期刊)</li>
 
 
-    <li><strong>24级研究生: 唐稳达, 李思瑶, 胡彦文, 张照, 徐鑫明, 杜孟欢, 胡金灵, 赵子堃, 李洋, 朱辰晔</strong> </li>
+    <li><strong>24级研究生: 唐稳达, 李思瑶, 胡彦文, 张照, 徐鑫明, 杜孟欢, 胡金灵, 李洋, 朱辰晔</strong> </li>
 </ul>
 
 <div class="gdoc-page__anchorwrap"><h2 id="fundings"><strong>Fundings:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Fundings:</strong>" href="#fundings"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
