--- a/index.html
+++ b/index.html
@@ -164,11 +164,11 @@
 <details open="" style="margin-bottom: 10px;">
     <summary><b>Journal papers</b></summary>
     <ul>
-        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Shuying Rao</u>, Min Zhu, Jiawei Huang, Jin Wang. SRCC: Sub-RTT Congestion Control for Lossless Datacenter Networks. <em><strong>IEEE Transactions on Industrial Informatics, 2024.</strong></em><span>&nbsp;</span></li>
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Shuying Rao</u>, Min Zhu, Jiawei Huang, Jin Wang. SRCC: Sub-RTT Congestion Control for Lossless Datacenter Networks. <em><strong>IEEE Transactions on Industrial Informatics, 2024.</strong></em><span>&nbsp;</span><a href="SRCC-TII-2024.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
 
-        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Ruiqian Li</u>, <span>&nbsp;</span><u>Ying Liu</u>, Jin Wang. Towards Fine-grained Load Balancing with Dynamical Flowlet Timeout in Datacenter Networks. <em><strong>Computer Networks, 2024.</strong></em><span>&nbsp;</span></li>
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Ruiqian Li</u>, <span>&nbsp;</span><u>Ying Liu</u>, Jin Wang. Towards Fine-grained Load Balancing with Dynamical Flowlet Timeout in Datacenter Networks. <em><strong>Computer Networks, 2024.</strong></em><span>&nbsp;</span><a href="TDLB-Computer Networks-2024.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
 
-        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Zikai Zhou</u>, Jin Zhang. Lightweight Automatic ECN Tuning Based on Deep Reinforcement Learning with Ultra-low Overhead in Datacenter Networks. <em><strong>IEEE Transactions on Network and Service Management, 2024.</strong></em><span>&nbsp;</span></li>
+        <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Zikai Zhou</u>, Jin Zhang. Lightweight Automatic ECN Tuning Based on Deep Reinforcement Learning with Ultra-low Overhead in Datacenter Networks. <em><strong>IEEE Transactions on Network and Service Management, 2024.</strong></em><span>&nbsp;</span><a href="LAECN-TNSM-2024.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
         
         <li style="padding: 2px 0px;">Wenxue Li, Chaoliang Zeng,<b>Jinbin Hu</b>, Kai Chen. FlowSail: Fine-grained and Practical Flow Control for Datacenter Networks. <em><strong>IEEE/ACM Transactions on Networking, 2024.</strong></em><span>&nbsp;</span><a href="FLOWSAIL-TON.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
 
