--- a/index.html
+++ b/index.html
@@ -109,6 +109,7 @@
 <p><strong>常年招收硕士生和本科生, 热烈欢迎具有科研热情的优秀同学加入.</strong></p>
 <p>Email: <a href="mailto:jinbinhu@csust.edu.cn">jinbinhu@csust.edu.cn</a></p>
 <p>每周组会进展: <a href="https://va0ibesbku3.feishu.cn/docx/ZX99dYa72odf9vxx5NmcFWYhnOd">长理DCN-每周组会进展</a></p>
+<p>论文汇报信息: <a href="https://va0ibesbku3.feishu.cn/sheets/Bv6Vst7Inhxj6xtn0BncRw63n4e">长理DCN-论文汇报信息</a></p>
 </div>
 <br clear="left" />
 <div class="gdoc-page__anchorwrap"><h2 id="research"><strong>Publications:</strong><a data-clipboard-text="" class="gdoc-page__anchor gdoc-page__anchor--right clip" aria-label="Anchor <strong>Papers:</strong>" href="#Papers"><svg class="icon link"><use xlink:href="#link"></use></svg></a></h2></div>
