--- a/index.html
+++ b/index.html
@@ -119,11 +119,11 @@
 <details open="" style="margin-bottom: 10px;">
   <summary><b>Conference papers</b></summary>
   <ul>
-    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Siyao Li</u>,  Jin Wang*. Congestion-aware Semi-Lossless Transport in Datacenter networks.  <em><strong>MUE&FutureTech, 2025.</strong></em><span>&nbsp;</span><a href="CASL-FutureTech-2025.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
+    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Siyao Li</u>, Jin Wang*. Congestion-aware Semi-Lossless Transport in Datacenter networks.  <em><strong>MUE&FutureTech, 2025.</strong></em><span>&nbsp;</span><a href="CASL-FutureTech-2025.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
       
-    <li style="padding: 2px 0px;">Jin Wang, <span>&nbsp;</span><u>Menghuan Du</u>,  <b>Jinbin Hu</b>*. H-Sketch:Top-k Traffic Inspection with High-precision and High-throughput in High-speed Networks. <em><strong>MUE&FutureTech, 2025.</strong></em><span>&nbsp;</span><a href="H-Sketch-FutureTech-2025.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
+    <li style="padding: 2px 0px;">Jin Wang, <span>&nbsp;</span><u>Menghuan Du</u>, <b>Jinbin Hu</b>*. H-Sketch:Top-k Traffic Inspection with High-precision and High-throughput in High-speed Networks. <em><strong>MUE&FutureTech, 2025.</strong></em><span>&nbsp;</span><a href="H-Sketch-FutureTech-2025.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
       
-    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Zhao Zhang</u>,  Jin Wang. Merger: Inversion-Free and Practical Programmable Packet Scheduler. <em><strong>MUE&FutureTech, 2025.</strong></em><span>&nbsp;</span><a href="Merger-FutureTech-2025.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
+    <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Zhao Zhang</u>, Jin Wang*. Merger: Inversion-Free and Practical Programmable Packet Scheduler. <em><strong>MUE&FutureTech, 2025.</strong></em><span>&nbsp;</span><a href="Merger-FutureTech-2025.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
 
     <li style="padding: 2px 0px;"><b>Jinbin Hu</b>, <span>&nbsp;</span><u>Rui Zhi</u>, <span>&nbsp;</span><u>Shuying Rao</u>, <span>&nbsp;</span><u>Ying Liu</u>, Jin Wang. DAR: Deadline-Aware Rerouting for Mix-Flows in Datacenter Networks. <em><strong>IEEE ISPA, 2024.</strong></em><span>&nbsp;</span><a href="DAR-ISPA-2024.pdf" class="md-opjjpmhoiojifppkkcdabiobhakljdgm_doc">[PDF]</a></li>
 
